--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,6 +1,6 @@
 @use "sass:map";
 
-/* Import variables */
+// Import variables
 @use "../abstracts/config" as *;
 @use "../utilities/media-queries" as media;
 
