--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -28,7 +28,7 @@ body#{$parent-selector} {
 #{$parent-selector} h5,
 #{$parent-selector} h6 {
   margin-bottom: 0.5em;
-  font-family: var(--font-family-heading);
+  font-family: var(--font-family-base);
   font-weight: 700;
   line-height: 1.2;
 }
