--- a/src/styles/abstracts/_config.scss
+++ b/src/styles/abstracts/_config.scss
@@ -104,6 +104,12 @@ $basic-colors: (
   "transparent": transparent,
 ) !default;
 
+$semantic-colors: ('primary', 'secondary', 'success', 'danger', 'warning', 'info');
+$primitive-color-names: map.keys($color-primitives);
+$color-names: list.join($semantic-colors, $primitive-color-names);
+$color-names: list.join($color-names, map.keys($basic-colors));
+
+
 @function validate-theme-tokens($theme-map, $required-tokens) {
   $missing-tokens: ();
 
